--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SQLALCHEMY_DATABASE_URL= mysql+pymysql://root:140823schmesom1917@localhost:3306/brigades_database
+SQLALCHEMY_DATABASE_URL= "mysql+pymysql://FCTech:2352871824FCupbritgates#1@brigatesdatabase.cat7dsvr4woe.us-east-1.rds.amazonaws.com:3306/brigades_database"
